--- a/src/app/admin/account-management/subscription/client-information/client-information.component.html
+++ b/src/app/admin/account-management/subscription/client-information/client-information.component.html
@@ -41,7 +41,7 @@
         </table>
     </div>
 </div>
-<div class="col-md-12 hidden-md-up  margin-top">
+<div class="hidden-md-up ">
     <div class="table-responsive">
         <table class="table mob-pad">
             <tbody>
