--- a/src/app/admin/account-management/subscription/user-maintenance/add-new-users/add-new-users.component.css
+++ b/src/app/admin/account-management/subscription/user-maintenance/add-new-users/add-new-users.component.css
@@ -45,3 +45,13 @@ a.expandLink:hover {
     margin-top: 31px;
     margin-right: 15px;
 }
+
+.table.table-modal th,
+.table.table-modal td {
+    border-top: 0px solid #eceeef;
+}
+
+.padding-modal {
+    padding-left: 12px;
+    padding-right: 12px;
+}
