--- a/src/app/admin/account-management/subscription/user-maintenance/existing-users/existing-users.component.html
+++ b/src/app/admin/account-management/subscription/user-maintenance/existing-users/existing-users.component.html
@@ -2,7 +2,7 @@
     <h4>Existing Users</h4>
     <label> Edit existing users to the subscription by searching below</label>
     <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-3 form-group">
             <label for='userProfile'>User Profile</label>
             <select id='userProfile' class="form-control">
                   <option value="admin">Admin</option>
@@ -10,11 +10,11 @@
                   <option value="sub">Subscriber</option>
                 </select>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 form-group">
             <label for='searchUsers'>Search Users</label>
             <input id='searchUsers' [ngModel]='searchUserName' type="text" class="form-control" placeholder="User Display Name or Email" />
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 form-group">
             <label for='userType'>User Type</label>
             <select id='userType' class="form-control">
                   <option value="internal">Internal</option>
@@ -22,7 +22,7 @@
                   <option value="all">All</option>
                 </select>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 form-group">
             <button type="button" class="btn btn-primary btn-desktop-margin float-xs-left hidden-sm-down" name="searchUserButton" (click)="searchUser()">Search</button>
             <button type="button" class="btn btn-secondary btn-desktop-margin float-xs-left hidden-sm-down" name="resetUserButton" (click)="reset()">Reset</button>
             <button type="button" class="btn btn-primary btn-block hidden-md-up margin-top" name="searchUserButton" (click)="searchUser()">Search</button>
@@ -146,7 +146,7 @@
         </button>
                 <h4 class="modal-title">Edit User</h4>
             </div>
-            <div class="modal-body">
+            <div class="modal-body hidden-sm-down">
                 <div class="row modal-form-margin-top">
                     <div class="col-md-3 col-sm-3">
                         <label>User Profile</label>
@@ -219,6 +219,68 @@
                     <div class="col-md-11 col-sm-11">
                         <a style='margin-left:15px' *ngIf='isClientActive' (click)='isClientActive=!isClientActive'><img class='img-responsive' height="30px" src="./assets/images/Default_on.svg" alt=""></a>
                         <a style='margin-left:15px' *ngIf='!isClientActive' (click)='isClientActive=!isClientActive'><img class='img-responsive' height="30px" src="./assets/images/Off.svg" alt=""></a>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-body hidden-md-up">
+                <div class="row modal-form-margin-top">
+                    <div class="col-md-3 col-sm-3">
+                        <label>User Profile</label>
+                    </div>
+                    <div class="col-md-5 col-sm-5">
+                        <select class="form-control">
+                  <option value="admin">Admin</option>
+                  <option value="sme">Subject Matter Expert</option>
+                  <option value="sub">Subscriber</option>
+                </select>
+                    </div>
+                    <div class="col-md-4 col-sm-4"></div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 col-sm-12 modal-form-margin-top">
+                        <div class="table-responsive table-container">
+                            <table class="table table-modal">
+                                <tbody>
+                                    <tr>
+                                        <th>Name</th>
+                                        <td>Search Display Name</td>
+                                    </tr>
+                                    <tr>
+                                        <th>Email</th>
+                                        <td>john.davis@willistowerswatson.com</td>
+                                    </tr>
+                                    <tr>
+                                        <th>City</th>
+                                        <td>Search City</td>
+                                    </tr>
+                                    <tr>
+                                        <th>Country</th>
+                                        <td>United Kingdom</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+                <div class="row modal-form-margin-top">
+                    <div class="padding-modal">
+                        <div class="col-md-8 col-sm-8">
+                            <label class="radio-inline" style="margin-right:15px"><input style="margin-right:5px" type="radio" name="optradio">Internal User</label>
+                            <label class="radio-inline"><input style="margin-right:5px" type="radio" name="optradio">External User</label>
+                        </div>
+                        <div class="col-md-4 col-sm-4">
+                        </div>
+                    </div>
+                </div>
+                <div class="row modal-form-margin-top">
+                    <div class="padding-modal">
+                        <div class="col-md-1 col-sm-1 col-xs-2">
+                            isActive
+                        </div>
+                        <div class="col-md-11 col-sm-11 col-xs-10">
+                            <a style='margin-left:15px' *ngIf='isClientActive' (click)='isClientActive=!isClientActive'><img class='img-responsive' height="30px" src="./assets/images/Default_on.svg" alt=""></a>
+                            <a style='margin-left:15px' *ngIf='!isClientActive' (click)='isClientActive=!isClientActive'><img class='img-responsive' height="30px" src="./assets/images/Off.svg" alt=""></a>
+                        </div>
                     </div>
                 </div>
             </div>
